2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-14  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix compilation with FB Level enabled
	* actions/acme.h: fix a stupid typo that made the WWW key not work
	* gnome-settings-multimedia-keys.c: (acme_get_screen_from_event),
	(acme_filter_events), (gnome_settings_multimedia_keys_init):
	only get the current screen if we actually need to, fix locating the
	glade file when compiling with a prefix not ending in '/'

2004-01-13  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (acme_filter_events): let's
	simplify some code

Tue Jan 13 10:48:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-daemon: Merge in acme.  We now have a variety of
	actions for the keybinding capplet.

2004-01-12  Federico Mena Quintero  <federico@ximian.com>

	* gnome-settings-accessibility-keyboard.c
	(ax_stickykeys_warning_dialog_post): Fix ; -> , typo.

2004-01-10  Bill Haneman <billh@gnome.org>

	* gnome-settings-accessibility-keyboard.c:
	Removed we_are_changing_xkb_state flag and related logic, since it
	didn't work anyway (due to async processing).
	(set_bool): Fix a logic error that resulted in set_bool always
	returning TRUE.
	(ax_warning_dialog_post): New, creates/posts a warning dialog (below).
	(ax_stickykeys_warning_dialog_post, ax_slowkeys_warning_dialog_post):
	New functions, display warning dialog to user alerting them
	when an AccessX feature (StickyKeys or SlowKeys) is turned on via
	a keyboard shorcut.  See bug #105093.
	(ax_slowkeys_response, ax_stickykeys_response, ax_response_callback):
	New, these callbacks either dismiss the dialog, post help, or
	revert the XKB change and dismiss the dialog(s).
	(set_gconf_from_server):
	Invoke dialog above if the Xkb setting for SlowKeys or StickyKeys
	has changed in isolation, independent of the gconf setting.  This
	indicates that a keyboard shortcut has been invoked.
	
	* ../po/POTFILES.in: