@@ -1,3 +1,9 @@
+2004-01-14  Bastien Nocera  <hadess@hadess.net>
+
+	* Makefile.am:
+	* gnome-settings-multimedia-keys.c: fix build on Linux/PPC machines
+	(the only ones to use the FB-Level code)
+
 2004-01-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.2
